[metadata]
description-file = DESCRIPTION.rst

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[files]
packages_root = agps3
packages =
        agps3

scripts =
        examples/ahuman.py
        examples/agegps3.py
        examples/thread_example.py

#extra_files =
#        setup.py
#        DESCRIPTION.rst
